修改硬编码问题